--- a/Systems-Research.html
+++ b/Systems-Research.html
@@ -160,9 +160,8 @@
         Systems Research Track invites submissions discussing original research contributions on all aspects of data
         science,
         management of data, artificial intelligence, machine/deep learning and their applications focused on systems
-        research. Authors can submit papers<strong> maximum of 6 pages </strong>including references. All accepted and
-        presented papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library
-        and other indexing.
+        research. Authors can submit papers<strong> maximum of 6 pages </strong>including references. Accepted papers will 
+        be submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements.
       </p>
       <p class="para">The topics of interests include, but are not limited to:</p>
 
